# CircuitKIT

./: .flake8  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ENVIRONMENT.md  LICENSE.md  MANIFEST.in  Makefile  README.md  THIRD_PARTY_LICENSES.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  sitemap.xml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml
about/faq/: index.html
about/license/: index.html
about/release-notes/: index.html
about/roadmap/: index.html
advanced/architecture-registry/: index.html
advanced/chat-templates/: index.html
advanced/circuit-artifacts/: index.html
advanced/memory-optimization/: index.html
advanced/vllm-evaluation/: index.html
algorithms/acdc/: index.html
algorithms/capability-matrix/: index.html
algorithms/cdt/: index.html
algorithms/eap/: index.html
algorithms/ibcircuit/: index.html
algorithms/overview/: index.html
algorithms/stability-tiers/: index.html
api-reference/applications/: index.html
api-reference/backends/: index.html
api-reference/dict-config/: index.html
api-reference/evaluation/: index.html
api-reference/flat-api/: index.html
api-reference/overview/: index.html
api-reference/pipeline/: index.html
api-reference/selectors/: index.html
api-reference/tasks/: index.html
assets/: circuitkit.css  mathjax.js
citation-map/: index.html
cli/applications/: index.html
cli/discovery/: index.html
cli/evaluation/: index.html
cli/overview/: index.html
cli/yaml-config/: index.html
contributing/documentation/: index.html
contributing/new-algorithms/: index.html
contributing/setup/: index.html
contributing/standards/: index.html
contributing/testing-on-cuda/: index.html
docs/: API_REFERENCE.md  INSTALLATION.md  citation-map.md  dev_enterprise_runbook.md  index.md  product_blueprint.md  pypi_core_contract.md  references.md
docs/about/: faq.md  license.md  release-notes.md  roadmap.md
docs/advanced/: architecture-registry.md  chat-templates.md  circuit-artifacts.md  hallucination-detection.md  memory-optimization.md  vllm-evaluation.md
docs/algorithms/: acdc.md  capability-matrix.md  cdt.md  eap.md  ibcircuit.md  overview.md  stability-tiers.md
docs/api-reference/: applications.md  backends.md  dict-config.md  evaluation.md  flat-api.md  overview.md  pipeline.md  selectors.md  tasks.md
docs/blog/: introducing-circuitkit.md
docs/cli/: applications.md  discovery.md  evaluation.md  overview.md  yaml-config.md
docs/contributing/: documentation.md  new-algorithms.md  setup.md  standards.md  testing-on-cuda.md
docs/evaluation/: ablation.md  baselines.md  benchmarking.md  causal-patching.md  framework.md  generalization.md  robustness.md  stability.md
docs/examples/: case-studies.md  notebooks.md  overview.md  scripts.md
docs/getting-started/: configuration.md  core-concepts.md  index.md  installation.md  quickstart.md  taxonomy.md
docs/guidelines/: Testing_Guidelines.md
docs/guides/: CONCEPTS.md  circuit_artifact_guide.md  eap_ig_memory_optimization.md  hallucination_detection_guide.md  index.md  steering.md  vllm_evaluation.md
docs/reference/: ARCHITECTURE_REGISTRY.md  FEATURES.md  index.md
docs/trust/: index.md  results.md  scope.md
docs/user-guide/: applications.md  custom-data.md  data-corruption.md  data.md  evaluation.md  pipeline-overview.md  selectors.md  tasks.md  troubleshooting.md  visualization.md
evaluation/ablation/: index.html
evaluation/baselines/: index.html
evaluation/benchmarking/: index.html
evaluation/causal-patching/: index.html
evaluation/framework/: index.html
evaluation/generalization/: index.html
evaluation/robustness/: index.html
evaluation/stability/: index.html
examples/: 01-quickstart.py  02-discover-python-api.py  03-discover-cli.sh  04-discover-yaml.py  05-evaluate-faithfulness.py  06-applications.py  07-pipeline.py  08-custom-data.py  09-load-and-reuse.py  10-steering.py  11-knowledge-editing.py  12-custom-corruption.py  13-transfer-matrix.py  README.md  simple_csv_task.yaml  simple_task_sample.csv
examples/case-studies/: 14-faithfulness-audit-for-compliance.py  15-compression-for-deployment.py  16-tabular-model-audit.py  17-quantization-unlearning.py  18-banking-safety-steering.py  19-trade-finance-document-classification.py  20-transit-edge-deployment.py  21-quantization-permanent-unlearning.ipynb  22-gender-bias-audit-and-mitigation.ipynb  23-jailbreak-safety-steering.ipynb  24-safety-refusal-custom-data.py  24_safety_sample.csv  index.html
examples/discovery/: algorithm-comparison.py  benchmark-circuit-discovery.py
examples/experiments/: e1_algo_validation_ioi.py  e2_cross_family_discovery.py  e3_neuron_level_ioi.py  e4_custom_data_jailbreak.py  e567_downstream_applications.py
examples/finetuning/: finetune-llama.py  finetune-qwen.py
examples/notebooks/: 00_colab_setup.ipynb  01_quickstart_pipeline.ipynb  02_algorithm_comparison.ipynb  03_custom_data_jailbreak.ipynb  04_evaluation_deep_dive.ipynb  05_visualization_gallery.ipynb  06_applications.ipynb  07_cli_and_yaml.ipynb  08_advanced_research_tools.ipynb  README.md  demo_2p5min.ipynb  index.html
examples/overview/: index.html
examples/pruning/: basic-prune.py  prune-llama.py  prune-qwen.py
examples/quantization/: quantize-llama.py  quantize-qwen.py
examples/scripts/: index.html
examples/validation/: README.md  _common.py  _runner.py  master_aggregator.py
examples/visualization/: graph-viz-example.py
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/core-concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/taxonomy/: index.html
guides/: index.html
reference/: index.html
references/: index.html
search/: search_index.json
tests/: README.md  __init__.py  conftest.py  test_custom_data.py
trust/: index.html
(+655 files in other folders)
